Changed the Title

--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
 
     <!-- Hero text content -->
     <div class="header-content" data-aos="fade-up" data-aos-duration="1500">
-      <h1>Welcome to Gen-T Portfolio</h1>
+      <h1>Welcome to Gen-T Hehe</h1>
       <p>Empowering your Business with Innovative, tailored Software Solutions for a digital-first world.</p>
       <a href="#projects" class="cta-button"><span>View Projects</span></a>
     </div>
